# colvars_gpu_prototype

./: CMakeLists.txt  READMD.md
src/: cuda_torch.cu  cuda_torch.h  cuda_torch_example.cpp
test_data/: example_rmsd_colvars.txt  example_rmsd_input.txt  reference_frame.txt  rmsd.py
